--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,10 @@
     <string name="menu_host">HOST MATCH</string>
     <string name="menu_join">JOIN MATCH</string>
     <string name="name">Enter A Nickname...</string>
-    <string name="enter_room_number">Enter Room Number</string>
-    <string name="error_room_number">Cannot find room with room number </string>
+    <string name="enter_room_number">Enter Room Code...</string>
+    <string name="error_room_number">Cannot find room with room code </string>
+    <string name="scan_QR">SCAN QR CODE</string>
+    <string name="join_game">JOIN GAME</string>
     <string name="dialog_join">Join</string>
     <!-- Strings used in Lobby -->
     <string name="lobby_start">START GAME</string>
